--- a/python101.ipynb
+++ b/python101.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python101.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP7Op5f2ar8N9avTQH2elCp",
+      "authorship_tag": "ABX9TyPR05Oc3WOleafNcfetUb2C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -824,7 +824,7 @@
         "id": "B7D1nOuaCXMJ"
       },
       "source": [
-        "# **Functioon**"
+        "# **Function**"
       ]
     },
     {
@@ -836,7 +836,7 @@
         "def add_two_nums(a, b):\r\n",
         "    return a + b"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -846,13 +846,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lRIKTY8KCrcs",
-        "outputId": "5a9b135a-6db3-4582-e097-25a879d2baa9"
+        "outputId": "12e9223f-324b-4719-f8a6-4a87ae861a58"
       },
       "source": [
         "result = add_two_nums(10,30)\r\n",
         "print(result)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -878,35 +878,19 @@
         "    print(\"That's great, hope you are wll!\")\r\n",
         "   "
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TeOQxcyfDwPh",
-        "outputId": "4987de51-ec8e-44bb-d0f7-b7a923e39b99"
+        "id": "TeOQxcyfDwPh"
       },
       "source": [
         "greeting()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "What is your name? benz\n",
-            "Hello benz\n",
-            "How are you today? good\n",
-            "benz feel good!\n",
-            "That's great, hope you are wll!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
