--- a/python101.ipynb
+++ b/python101.ipynb
@@ -836,7 +836,7 @@
         "def add_two_nums(a, b):\r\n",
         "    return a + b"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -846,13 +846,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lRIKTY8KCrcs",
-        "outputId": "12e9223f-324b-4719-f8a6-4a87ae861a58"
+        "outputId": "5a9b135a-6db3-4582-e097-25a879d2baa9"
       },
       "source": [
         "result = add_two_nums(10,30)\r\n",
         "print(result)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -878,19 +878,35 @@
         "    print(\"That's great, hope you are wll!\")\r\n",
         "   "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TeOQxcyfDwPh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TeOQxcyfDwPh",
+        "outputId": "d63afbf7-de70-44ec-d793-b444af1916cb"
       },
       "source": [
         "greeting()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "What is your name? benz\n",
+            "Hello benz\n",
+            "How are you today? good\n",
+            "benz feel good!\n",
+            "That's great, hope you are wll!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
