--- a/python101.ipynb
+++ b/python101.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python101.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPR05Oc3WOleafNcfetUb2C",
+      "authorship_tag": "ABX9TyNWFsX5lu/WYxTn4ReSjs49",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,15 +30,15 @@
         "id": "sUiHEB_TrKFi"
       },
       "source": [
-        "# **Into python 101**\r\n",
-        "- variable\r\n",
-        "\r\n",
-        "- data type\r\n",
-        "\r\n",
-        "- data structure: list, tuple\r\n",
-        "\r\n",
-        "- function\r\n",
-        "\r\n"
+        "# **Into python 101**\n",
+        "- variable\n",
+        "\n",
+        "- data type\n",
+        "\n",
+        "- data structure: list, tuple\n",
+        "\n",
+        "- function\n",
+        "\n"
       ]
     },
     {
@@ -51,14 +51,14 @@
         "outputId": "e5dda985-7ffd-47cb-e0bd-176fef822e0f"
       },
       "source": [
-        "#basic calculation\r\n",
-        "print(1+1)\r\n",
-        "print(2*2)\r\n",
-        "print(10-2)\r\n",
-        "print(5/2)\r\n",
-        "print(5//2) ##floor division เอา ส่วน\r\n",
-        "print(5**3) ##power\r\n",
-        "print(9 % 2) ## mod เอา เศ๋ษ\r\n"
+        "#basic calculation\n",
+        "print(1+1)\n",
+        "print(2*2)\n",
+        "print(10-2)\n",
+        "print(5/2)\n",
+        "print(5//2) ##floor division เอา ส่วน\n",
+        "print(5**3) ##power\n",
+        "print(9 % 2) ## mod เอา เศ๋ษ\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -92,9 +92,9 @@
         "id": "1kZs44bDs6do"
       },
       "source": [
-        "#variable assigment\r\n",
-        "salary = 50000\r\n",
-        "expanse = 34000\r\n",
+        "#variable assigment\n",
+        "salary = 50000\n",
+        "expanse = 34000\n",
         "saving = salary - expanse"
       ],
       "execution_count": null,
@@ -129,7 +129,7 @@
         "id": "Uvp0LeT-urH2"
       },
       "source": [
-        "#delete variable\r\n",
+        "#delete variable\n",
         "# del saving"
       ],
       "execution_count": null,
@@ -145,10 +145,10 @@
         "outputId": "81c8c0fc-a69b-4a70-822a-9fa9cb4b13dd"
       },
       "source": [
-        "## tuple unpacking (multiple assigment)\r\n",
-        "my_name, my_salary, my_expanse = \"Benz\", 50000, 34000\r\n",
-        "print(my_name)\r\n",
-        "print(my_salary)\r\n",
+        "## tuple unpacking (multiple assigment)\n",
+        "my_name, my_salary, my_expanse = \"Benz\", 50000, 34000\n",
+        "print(my_name)\n",
+        "print(my_salary)\n",
         "print(my_expanse)"
       ],
       "execution_count": null,
@@ -183,18 +183,18 @@
         "outputId": "01f0ab0a-d39d-466d-a4c7-b6e7ebc2505a"
       },
       "source": [
-        "name = 'benz'\r\n",
-        "print(name)\r\n",
-        "text = \"I'm learning python\"\r\n",
-        "print(text)\r\n",
-        "text2 = 'I am learning \"python\"'\r\n",
-        "print(text2)\r\n",
-        "text3 = 'I\\'m learning \\'python\\'' ## escaping character \\\r\n",
-        "print(text3)\r\n",
-        "text4 = \"\"\" This is very long string\r\n",
-        "This is very long stringThis is very long string\r\n",
-        "This is very long string \"\"\"\r\n",
-        "print(text4)\r\n"
+        "name = 'benz'\n",
+        "print(name)\n",
+        "text = \"I'm learning python\"\n",
+        "print(text)\n",
+        "text2 = 'I am learning \"python\"'\n",
+        "print(text2)\n",
+        "text3 = 'I\\'m learning \\'python\\'' ## escaping character \\\n",
+        "print(text3)\n",
+        "text4 = \"\"\" This is very long string\n",
+        "This is very long stringThis is very long string\n",
+        "This is very long string \"\"\"\n",
+        "print(text4)\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -223,7 +223,7 @@
         "outputId": "5ce65511-1fac-4e1f-9ef2-d004eccaf1fc"
       },
       "source": [
-        "#print string\r\n",
+        "#print string\n",
         "print(\"Hello\", \"Wolrd\", \"Python\")"
       ],
       "execution_count": null,
@@ -279,11 +279,11 @@
         "outputId": "3af76355-36f8-411f-b634-436d83d2fa92"
       },
       "source": [
-        "#fstring\r\n",
-        "my_name = \"Benz\"\r\n",
-        "my_age  = 26\r\n",
-        "\r\n",
-        "text = f\"Hello! my name is {my_name} and I am {my_age} years old.\"\r\n",
+        "#fstring\n",
+        "my_name = \"Benz\"\n",
+        "my_age  = 26\n",
+        "\n",
+        "text = f\"Hello! my name is {my_name} and I am {my_age} years old.\"\n",
         "print(text)"
       ],
       "execution_count": null,
@@ -305,16 +305,16 @@
           "height": 34
         },
         "id": "WzzlPov3zFcd",
-        "outputId": "5d29d930-326a-48d0-cbef-b35511e519e2"
+        "outputId": "5ead78bc-3829-448e-d386-8b87a1e9b129"
       },
       "source": [
-        "# method = function design for specific class\r\n",
-        "#string method\r\n",
-        "\r\n",
-        "text = \"a duck walks into a bar.\"\r\n",
+        "# method = function design for specific class\n",
+        "#string method\n",
+        "\n",
+        "text = \"a duck walks into a bar.\"\n",
         "text.upper()"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -329,7 +329,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 1
         }
       ]
     },
@@ -426,15 +426,63 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QvKK-Hm1tKvY",
+        "outputId": "583059ae-468c-446a-9e13-873312908dc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tokens = text.split(\" \")\n",
+        "print(tokens)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['a', 'duck', 'walks', 'into', 'a', 'bar.']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y-Mm-gh1tYph",
+        "outputId": "21c7fef2-f2a9-48d0-d4d1-0cf0303d2690",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "text = \" \".join(tokens)\n",
+        "print(text)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a duck walks into a bar.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "BYBgvvau0MnQ"
       },
       "source": [
-        "# **Data type**\r\n",
-        "- int\r\n",
-        "- float\r\n",
-        "- string\r\n",
+        "# **Data type**\n",
+        "- int\n",
+        "- float\n",
+        "- string\n",
         "- bool (boolean)"
       ]
     },
@@ -448,8 +496,8 @@
         "outputId": "740ad176-104e-44c4-806f-ef7e75f76807"
       },
       "source": [
-        "#int \r\n",
-        "x = 100\r\n",
+        "#int \n",
+        "x = 100\n",
         "type(x)"
       ],
       "execution_count": null,
@@ -478,8 +526,8 @@
         "outputId": "86700a84-5172-4ccc-8428-4ae47348fdf5"
       },
       "source": [
-        "#float\r\n",
-        "x = 1.5\r\n",
+        "#float\n",
+        "x = 1.5\n",
         "type(x)"
       ],
       "execution_count": null,
@@ -508,8 +556,8 @@
         "outputId": "7763f0b1-e1f3-4c7a-9001-ceb10654077a"
       },
       "source": [
-        "#string\r\n",
-        "text = \"hello\"\r\n",
+        "#string\n",
+        "text = \"hello\"\n",
         "type(text)"
       ],
       "execution_count": null,
@@ -538,9 +586,9 @@
         "outputId": "dd7d6ab2-0ecd-4886-996c-6294290bdc6d"
       },
       "source": [
-        "#bool\r\n",
-        "print(10*2 == 20)\r\n",
-        "print(10*2 > 30)\r\n",
+        "#bool\n",
+        "print(10*2 == 20)\n",
+        "print(10*2 > 30)\n",
         "print(\"Hello\" != \"hello\")"
       ],
       "execution_count": null,
@@ -562,9 +610,11 @@
         "id": "p-j4WZnP-VqI"
       },
       "source": [
-        "# **Data Structure**\r\n",
-        "- list\r\n",
-        "- tuple"
+        "# **Data Structure**\n",
+        "- list\n",
+        "- tuple\n",
+        "- dictionary\n",
+        "- set"
       ]
     },
     {
@@ -577,9 +627,9 @@
         "outputId": "918c0d02-16f6-499d-9e81-344c8f0bf465"
       },
       "source": [
-        "#create a new list\r\n",
-        "fruits  = [\"apple\", \"orange\", \"pineapple\", \"grape\"] #เก็บอะไรก็ได้ int, float, str, bool\r\n",
-        "fruits\r\n"
+        "#create a new list\n",
+        "fruits  = [\"apple\", \"orange\", \"pineapple\", \"grape\"] #เก็บอะไรก็ได้ int, float, str, bool\n",
+        "fruits\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -607,7 +657,7 @@
         "outputId": "163a1bfb-1cfb-4dae-fc86-0b5fc2785475"
       },
       "source": [
-        "print(fruits[0])\r\n",
+        "print(fruits[0])\n",
         "print(fruits[-1])"
       ],
       "execution_count": null,
@@ -632,9 +682,9 @@
         "outputId": "6f53c935-8fc4-4aed-e74d-59e81e130cef"
       },
       "source": [
-        "print(fruits[:])\r\n",
-        "print(fruits[:2])\r\n",
-        "print(fruits[1:3])\r\n",
+        "print(fruits[:])\n",
+        "print(fruits[:2])\n",
+        "print(fruits[1:3])\n",
         "print(fruits[1:])"
       ],
       "execution_count": null,
@@ -661,8 +711,8 @@
         "outputId": "daacc10e-f3c9-46c1-d83c-8d06ca40163b"
       },
       "source": [
-        "## add strawberry at the end of fruit\r\n",
-        "fruits.append(\"strawberry\")\r\n",
+        "## add strawberry at the end of fruit\n",
+        "fruits.append(\"strawberry\")\n",
         "print(fruit)"
       ],
       "execution_count": null,
@@ -686,7 +736,7 @@
         "outputId": "7e52b906-117f-4616-cfcb-ff79fd4b3596"
       },
       "source": [
-        "fruits.remove(\"orange\")\r\n",
+        "fruits.remove(\"orange\")\n",
         "print(fruit)"
       ],
       "execution_count": null,
@@ -710,7 +760,7 @@
         "outputId": "90b19fed-eb60-421e-8d3d-7ee7410d0169"
       },
       "source": [
-        "fruits.insert(1, \"orange\")\r\n",
+        "fruits.insert(1, \"orange\")\n",
         "print(fruit)"
       ],
       "execution_count": null,
@@ -734,10 +784,10 @@
         "outputId": "a075e138-8709-41c0-f95b-27d2f1e510f4"
       },
       "source": [
-        "# for loop (Control flow)\r\n",
-        "len(fruit)\r\n",
-        "\r\n",
-        "for fruit in fruits:\r\n",
+        "# for loop (Control flow)\n",
+        "len(fruit)\n",
+        "\n",
+        "for fruit in fruits:\n",
         "    print(fruit.upper())"
       ],
       "execution_count": null,
@@ -776,10 +826,10 @@
         "outputId": "9868b16d-53df-43b2-e0fc-892324b917a7"
       },
       "source": [
-        "for fruit in fruits:\r\n",
-        "    x = fruit.upper()\r\n",
-        "    fruit_uppercase.append(x)\r\n",
-        "\r\n",
+        "for fruit in fruits:\n",
+        "    x = fruit.upper()\n",
+        "    fruit_uppercase.append(x)\n",
+        "\n",
         "print(fruit_uppercase)"
       ],
       "execution_count": null,
@@ -803,8 +853,8 @@
         "outputId": "3bbcbc5a-3464-463a-9c5e-ea50d41e3e7d"
       },
       "source": [
-        "## tuple อัปเดทค่าไม่ได้ immutable\r\n",
-        "gpa = (3.5, 3.4, 3.89)\r\n",
+        "## tuple อัปเดทค่าไม่ได้ immutable\n",
+        "gpa = (3.5, 3.4, 3.89)\n",
         "print(gpa)"
       ],
       "execution_count": null,
@@ -833,7 +883,7 @@
         "id": "NRxpiItvCar5"
       },
       "source": [
-        "def add_two_nums(a, b):\r\n",
+        "def add_two_nums(a, b):\n",
         "    return a + b"
       ],
       "execution_count": null,
@@ -849,7 +899,7 @@
         "outputId": "5a9b135a-6db3-4582-e097-25a879d2baa9"
       },
       "source": [
-        "result = add_two_nums(10,30)\r\n",
+        "result = add_two_nums(10,30)\n",
         "print(result)"
       ],
       "execution_count": null,
@@ -869,13 +919,13 @@
         "id": "UltjEPBNDJcb"
       },
       "source": [
-        "## greeting a user\r\n",
-        "def greeting():\r\n",
-        "    username = input(\"What is your name? \")\r\n",
-        "    print(\"Hello \" + username)\r\n",
-        "    feeling = input(\"How are you today? \")\r\n",
-        "    print(f\"{username} feel {feeling}!\")\r\n",
-        "    print(\"That's great, hope you are wll!\")\r\n",
+        "## greeting a user\n",
+        "def greeting():\n",
+        "    username = input(\"What is your name? \")\n",
+        "    print(\"Hello \" + username)\n",
+        "    feeling = input(\"How are you today? \")\n",
+        "    print(f\"{username} feel {feeling}!\")\n",
+        "    print(\"That's great, hope you are wll!\")\n",
         "   "
       ],
       "execution_count": null,
@@ -893,7 +943,7 @@
       "source": [
         "greeting()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
